examples/test/testpolicy9959.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9959
  namespace: namespace405
spec:
  podSelector:
    matchLabels:
      key15: value41
      key31: value29
      key17: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value44
      podSelector:
        matchLabels:
          key9: value23
          key16: value4
          key47: value47
